<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/urlTv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_cloud"
        android:text="@string/astlix_url"
        android:textSize="20sp"
        android:gravity="center"
        tools:ignore="UseCompatTextViewDrawableXml" />
    <TextView
        android:id="@+id/mailTv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/urlTv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_mail"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/mail"
        tools:ignore="UseCompatTextViewDrawableXml" />
    <TextView
        android:id="@+id/telefonoTv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/mailTv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_telephone"
        android:text="@string/telefono"
        android:gravity="center"
        android:textSize="20sp"
        tools:ignore="UseCompatTextViewDrawableXml" />
    <TextView
        android:id="@+id/versionTv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/telefonoTv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/version"
        android:drawableStart="@drawable/ic_code"
        android:textSize="20sp"
        android:gravity="center"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/versionTv"
        android:layout_width="155dp"
        android:layout_height="115dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_astlix"/>
</RelativeLayout>