<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/urlServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_cloud"
        android:drawablePadding="15dp"
        android:hint="@string/url_sql_server"
        android:textSize="20sp"
        tools:ignore="Autofill"
        android:inputType="textUri" />
    <EditText
        android:id="@+id/baseServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/urlServer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_database"
        android:drawablePadding="15dp"
        android:hint="@string/base_de_datos_sql_server"
        android:textSize="20sp"
        tools:ignore="Autofill"
        android:inputType="text" />
    <EditText
        android:id="@+id/userServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/baseServer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:hint="@string/usuario_sql_server"
        android:textSize="20sp"
        tools:ignore="Autofill"
        android:inputType="text" />
    <EditText
        android:id="@+id/passServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/userServer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="15dp"
        android:hint="@string/contrase_a_sql_server"
        android:textSize="20sp"
        tools:ignore="Autofill"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/butGuardar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passServer"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_verde"
        android:text="@string/butGuardar"
        android:drawableStart="@drawable/ic_save"
        android:textSize="20sp"
        android:textColor="@color/grisAstlix"/>
</RelativeLayout>