<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/general"
        android:background="@drawable/menu3_rectangle"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu2Total"
                android:textSize="20sp"
                android:gravity="center"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:id="@+id/cantidad"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/zeroTxt"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"
                android:background="@drawable/circulo" />
            <ImageView
                android:src="@drawable/csv_file"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/upload"
                android:textSize="24sp"
                android:gravity="end"
                android:id="@+id/exportarTags"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/menu3_rectangle">
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/menu3p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/epc"
                android:gravity="center"
                android:textSize="20sp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/verdeAstlix"/>
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/menu3p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/rssi"
                android:gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/verdeAstlix"/>
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/menu3p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/hash"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/verdeAstlix"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"/>
        <ListView
            android:id="@+id/lecturas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>